# bio-datasets

./: .gitignore  README.md  pyproject.toml
examples/: upload_cath_dataset.py  upload_foldcomp_db.py
features/: atom_array.py
src/bio_datasets/: __init__.py  config.py  constants.py  np_utils.py  protein.py
src/bio_datasets/features/: __init__.py  atom_array.py  features.py
src/bio_datasets/packaged_modules/structurefolder/: structurefolder.py
src/bio_datasets/protein/: __init__.py  complex.py  constants.py  protein.py
