[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bio_datasets"
version = "0.1.0"
description = "Easy to use bio datasets building on the HF datasets library"
authors = [
    {name = "Alex Hawkins-Hooker"},
]
dependencies = [
    "datasets>=3.0.0",
    "biotite>=1.0.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["bio_datasets"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
