[build-system]
requires = ["poetry-core>=1.0.0"]  # Use poetry-core for build-system requirements
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bio_datasets"
version = "0.0.1"
description = "Fast, convenient and shareable datasets for BioML"
authors = [
    "Alex Hawkins-Hooker",
]
requires-python = ">=3.7"

[tool.poetry.dependencies]
biotite = ">=1.0.0"
datasets = {git = "https://github.com/alex-hh/datasets.git", rev = "iterable-dataset-fixes"}

[tool.poetry.source]
name = "pypi"
url = "https://pypi.org/simple"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
